dark mode text fixed

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,6 @@
     background-color: #EDEAE3;
 }
 
-.text-color {
+/* .text-color {
     color: #4C433D;
-}
+} */
